Ensure text remains visible during webfont load

--- a/style/_fonts.scss
+++ b/style/_fonts.scss
@@ -3,6 +3,7 @@
     font-style: normal;
     font-weight: 400;
     src: url("fonts/avnir_sv/AvenirLTStd-Book.otf") format("opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     font-style: normal;
     font-weight: 500;
     src: url("fonts/avnir_sv/AvenirLTStd-Roman.otf") format("opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
     font-style: normal;
     font-weight: 600;
     src: url("fonts/avnir_sv/AvenirLTStd-Medium.otf") format("opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
     font-style: normal;
     font-weight: 700;
     src: url("fonts/axiforma/Axiforma-Bold.otf") format("opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -31,6 +35,7 @@
     font-style: normal;
     font-weight: 300;
     src: url("fonts/cera-pro-sv/Cera-Pro-Light.otf") format("opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -38,6 +43,7 @@
     font-style: normal;
     font-weight: 400;
     src: url("fonts/cera-pro-sv/Cera-Pro-Regular-Italic.otf") format("opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -45,6 +51,7 @@
     font-style: normal;
     font-weight: 500;
     src: url("fonts/cera-pro-sv/Cera-Pro-Medium.otf") format("opentype");
+    font-display: swap;
 }
 
 @font-face {
@@ -54,6 +61,7 @@
     src: url("fonts/gilroy-font/Gilroy-Regular.eot"),
         url("fonts/gilroy-font/Gilroy-Regular.woff") format("woff"),
         url("fonts/gilroy-font/Gilroy-Regular.ttf") format("truetype");
+    font-display: swap;
 }
 
 @font-face {
@@ -63,6 +71,7 @@
     src: url("fonts/gilroy-font/Gilroy-Medium.eot"),
         url("fonts/gilroy-font/Gilroy-Medium.woff") format("woff"),
         url("fonts/gilroy-font/Gilroy-Medium.ttf") format("truetype");
+    font-display: swap;
 }
 
 @font-face {
@@ -72,4 +81,5 @@
     src: url("fonts/gilroy-font/Gilroy-SemiBold.eot"),
         url("fonts/gilroy-font/Gilroy-SemiBold.woff") format("woff"),
         url("fonts/gilroy-font/Gilroy-SemiBold.ttf") format("truetype");
+    font-display: swap;
 }
